--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,9 +30,9 @@ classifiers = [
     "Topic :: Software Development :: Libraries",
 ]
 dependencies = [
-    "beautifulsoup4 ~= 4.11.1",
-    "requests ~= 2.28.1",
-    "pydantic ~= 1.10.4",
+    "beautifulsoup4 == 4.11.1",
+    "requests == 2.28.1",
+    "pydantic == 1.10.4",
 ]
 
 [project.optional-dependencies]
