--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          token: ${{ secrets.GIT_BOT_TOKEN }}
           fetch-depth: 0
       - name: Set up Python 3.7
         uses: actions/setup-python@v4
