Refactored git workflow/renamed LICENSE file

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -2,9 +2,9 @@ name: lint
 
 on:
   push:
-    branches: main
+    branches: [main]
   pull_request:
-    branches: [develop, release-**]
+    branches: [develop]
 
 jobs:
   black:
