--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: build
 
 on:
   push:
-    branches: main
+    branches: [main]
   pull_request:
-    branches: [develop, release-**]
+    branches: [develop]
 
 jobs:
   build:
