--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: test
 
 on:
   push:
-    branches: main
+    branches: [main]
   pull_request:
-    branches: [develop, release-**]
+    branches: [develop]
 
 jobs:
   unit:
@@ -21,7 +21,7 @@ jobs:
       - name: Install dependencies
         run: pip install -e ".[dev]"
       - name: Run pytest
-        run: pytest --mock-url="https://dummy.com" --verbose ./tests/unit
+        run: pytest --log-cli-level="DEBUG" --verbose ./tests/unit
   integration:
     runs-on: ubuntu-latest
     strategy:
@@ -36,4 +36,4 @@ jobs:
       - name: Install dependencies
         run: pip install -e ".[dev]"
       - name: Run pytest
-        run: pytest --mock-url="${{ secrets.API_URL }}" --verbose ./tests/integration
+        run: pytest --mock-url="${{ secrets.MOCK_URL }}" --log-cli-level="DEBUG" --verbose ./tests/integration
