--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         with:
+          ref: releases/${{ github.event.inputs.version }}
           ssh-key: ${{ secrets.USER_SSH_KEY }}
           fetch-depth: 0
       - name: Set up Python 3.7
@@ -25,30 +26,31 @@ jobs:
           python-version: "3.7"
       - name: Set up Git
         run: |
+          echo "${{ secrets.USER_GPG_KEY }}" | gpg --import
           git config --add user.name "${{ secrets.USER_NAME }}"
           git config --add user.email "${{ secrets.USER_MAIL }}"
+          git config --add user.signingkey "${{ secrets.USER_GPG_ID }}"
+          git config commit.gpgsign true
       - name: Run build
         run: |
           pip install --upgrade hatch
           hatch version ${{ env.VERSION }}              
           hatch --verbose build
+      - name: Merge release branch
+        run: |
+          git commit -am "Release ${{ env.VERSION }}: increment version"
+          git checkout main
+          git merge --no-ff ${{ env.BRANCH }}
+          git tag -a v${{ env.VERSION }} -m "Release ${{ env.VERSION }}"
+          git push --atomic origin main refs/tags/v${{ env.VERSION }}
+          # Try to merge back release branch
+          git checkout ${{ env.BRANCH }}
+          git merge --ff-only main
+          git checkout develop
+          git merge --no-ff ${{ env.BRANCH }}
+          git push origin develop :${{ env.BRANCH }}
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@v1.5.2
         with:
           password: ${{ secrets.PYPI_TOKEN }}
           verbose: true
-      - name: Merge release branch
-        run: |
-          git checkout ${{ env.BRANCH }}
-          git commit -am "Release ${{ env.VERSION }}: increment version"
-          git checkout main
-          git merge --no-ff ${{ env.BRANCH }}
-          git tag -a ${{ env.VERSION }} -m "Release ${{ env.VERSION }}"
-          git checkout ${{ env.BRANCH }}
-          git merge --ff-only main
-          git push --atomic origin main ${{ env.BRANCH }} refs/tags/${{ env.VERSION }}
-          # Try to merge back release branch
-          git checkout develop
-          git merge --no-ff ${{ env.BRANCH }}
-          git branch -d ${{ env.BRANCH }}
-          git push origin develop :${{ env.BRANCH }}
