--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,7 +32,7 @@ classifiers = [
 dependencies = [
     "beautifulsoup4 ~= 4.11.1",
     "requests ~= 2.31.0",
-    "pydantic ~= 1.10.4",
+    "pydantic ~= 2.5.3",
 ]
 
 [project.optional-dependencies]
@@ -49,7 +49,7 @@ dev = [
 "Issues" = "https://github.com/TrendATI/pytmv1/issues"
 
 [tool.hatch.build.targets.sdist]
-exclude = [".github", "tests"]
+exclude = [".github", "template", "tests"]
 
 [tool.hatch.version]
 path = "src/pytmv1/__about__.py"
@@ -67,7 +67,7 @@ color_output = true
 
 [tool.mypy]
 python_version = "3.7"
-exclude = ["dist", "tests", "venv"]
+exclude = ["dist", "template", "tests", "venv"]
 show_column_numbers = true
 warn_unused_configs = true
 pretty = true
