--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,6 @@
 [flake8]
 exclude = .git,.github,.mypy_cache,.pytest_cache,__pycache__,dist,venv
+extend-ignore = E701
 max-complexity = 10
 max-line-length = 79
 statistics = true
