--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           git merge --no-ff ${{ env.BRANCH }}
           git push --atomic origin main develop refs/tags/v${{ env.VERSION }} :${{ env.BRANCH }}
       - name: Publish package to PyPI
-        uses: pypa/gh-action-pypi-publish@v1.5.2
+        uses: pypa/gh-action-pypi-publish@release/v1
         with:
           password: ${{ secrets.PYPI_TOKEN }}
           verbose: true
